kubernetes/ingress-across-namespaces/ingress/app1-svc.yml
kind: Service
apiVersion: v1
metadata:
  name: app1
  namespace: default
spec:
  type: ExternalName
  externalName: app1-svc.app1.svc.cluster.local
  ports:
  - port: 80
