kubernetes/ingress-across-namespaces/ingress/app2-svc.yml
kind: Service
apiVersion: v1
metadata:
  name: app2
  namespace: default
spec:
  type: ExternalName
  externalName: app2-svc.app2.svc.cluster.local
  ports:
  - port: 80
